--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.0",
     "shadcn-ui": "^0.8.0",
     "switch": "^0.0.0",
     "tailwind-merge": "^2.5.2",
